--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,3 +1,17 @@
+@media (orientation: portrait) {
+    body {
+        width: 100vw;
+        height: calc(100vw * 16 / 9);
+    }
+}
+
+@media (orientation: landscape) {
+    body {
+        width: calc(100vh * 9 / 16);
+        height: 100vh;
+    }
+}
+
 html {
     -ms-touch-action: none;
 }
@@ -28,10 +42,9 @@ input::-webkit-inner-spin-button {
 
 body {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 0;
     border: 0;
     margin: 0;
@@ -123,6 +136,7 @@ p.footer {
     0% {
         background-position: 0 0;
     }
+
     100% {
         background-position: 60px 0;
     }
