--- a/style-mobile.css
+++ b/style-mobile.css
@@ -2,15 +2,13 @@ html {
     -ms-touch-action: none;
 }
 
-@media screen and (min-aspect-ratio: 9/16) {
+/* @media screen and (min-aspect-ratio: 9/16) {
     body {
         width: calc(100vh * 9 / 16);
         height: 100vh;
         background-image: url('res/bg1.webp');
         background-position: 50% 0%;
-        /* 画像を中央に配置 */
         background-repeat: no-repeat;
-        /* 画像を繰り返さない */
         background-size: auto 100vh;
     }
 }
@@ -21,11 +19,20 @@ html {
         height: calc(100vw * 16 / 9);
         background-image: none;
     }
+} */
+
+body {
+    background-image: url('res/bg1.webp');
+    background-position: 50% 0%;
+    /* 画像を中央に配置 */
+    background-repeat: no-repeat;
+    /* 画像を繰り返さない */
+    background-size: auto 100vh;
 }
 
 @keyframes slideIn {
     0% {
-        right: -50%;
+        right: calc(var(--achievementH) * -1.5);
     }
     100% {
         right: 0;
@@ -36,7 +43,7 @@ html {
         right: 0;
     }
     100% {
-        right: -50%;
+        right: calc(var(--achievementH) * -1.5);
     }
 }
 .slide-in {
