--- a/style-mobile.css
+++ b/style-mobile.css
@@ -30,9 +30,15 @@ body {
     background-size: auto 100vh;
 }
 
+.likeemoji{
+    vertical-align: middle;
+    width: auto;
+    height: 1em;
+}
+
 @keyframes slideIn {
     0% {
-        right: calc(var(--achievementH) * -1.5);
+        right: calc(var(--achievementW) * -1.5);
     }
 
     100% {
@@ -46,7 +52,7 @@ body {
     }
 
     100% {
-        right: calc(var(--achievementH) * -1.5);
+        right: calc(var(--achievementW) * -1.5);
     }
 }
 
@@ -60,11 +66,179 @@ body {
     animation-fill-mode: forwards;
 }
 
+@keyframes yuyutaIn {
+    0% {
+        right: calc(var(--announceYuyutaW) * -1.5);
+    }
+
+    100% {
+        right: 0;
+    }
+}
+
+@keyframes yuyutaOut {
+    0% {
+        right: 0;
+    }
+
+    100% {
+        right: calc(var(--announceYuyutaW) * -1.5);
+    }
+}
+
+.yuyuta-in {
+    animation: 1s ease-out 0s 1 yuyutaIn;
+    animation-fill-mode: forwards;
+}
+
+.yuyuta-out {
+    animation: 1s ease-in 0s 1 yuyutaOut;
+    animation-fill-mode: forwards;
+}
+
+@keyframes takadaIn {
+    0% {
+        right: calc(var(--announceTakadaW) * -1.5);
+    }
+
+    100% {
+        right: 0;
+    }
+}
+
+@keyframes takadaOut {
+    0% {
+        right: 0;
+    }
+
+    100% {
+        right: calc(var(--announceTakadaW) * -1.5);
+    }
+}
+
+.takada-in {
+    animation: 1s ease-out 0s 1 takadaIn;
+    animation-fill-mode: forwards;
+}
+
+.takada-out {
+    animation: 1s ease-in 0s 1 takadaOut;
+    animation-fill-mode: forwards;
+}
+
 .marquee {
     position: absolute;
     white-space: nowrap;
     overflow: hidden;
     pointer-events: none;
+}
+
+.selectbgm{
+    color: white;
+    background-color: transparent;
+    padding: 1em 0;
+    font-family: 'DotGothic16', sans-serif;
+    border: none;
+}
+
+.choices {
+    color: white;
+    background-color: transparent;
+    padding: 1em 0;
+    font-family: 'DotGothic16', sans-serif;
+    border: none;
+}
+
+@keyframes correct {
+    0% {
+        background-color: transparent;
+        transform: scale(1);
+    }
+
+    50% {
+        background-color: yellow;
+        transform: scale(1.2);
+    }
+
+    100% {
+        background-color: transparent;
+        transform: scale(1);
+    }
+}
+
+@keyframes incorrect {
+    0% {
+        background-color: transparent;
+        transform: scale(1);
+    }
+
+    50% {
+        background-color: red;
+        transform: scale(1.2);
+    }
+
+    100% {
+        background-color: transparent;
+        transform: scale(1);
+    }
+}
+
+.choices.correct {
+    animation: correct 1s;
+}
+
+.choices.incorrect {
+    animation: incorrect 1s;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+.damage {
+    animation: shake 0.5s;
 }
 
 body,
